--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,51 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="48x48" href="%sveltekit.assets%/favicon-48x48.png" />
 		<meta name="viewport" content="width=device-width" />
+		<title>
+			Search general conference addresses of the Church of Jesus Christ of Latter-day Saints
+		</title>
+		<script
+			async
+			src="https://analytics.umami.is/script.js"
+			data-website-id="d0c36680-7d94-45c0-8a18-d75cb5b71141"
+		></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
-			<main class="container">%sveltekit.body%</main>
+		<div id="page-container">
+			<div id="content-wrapper">
+				<main class="container">%sveltekit.body%</main>
+			</div>
+			<footer id="footer-wrapper">
+				<p>
+					Not affiliated with the Church of Jesus Christ of Latter-day Saints
+					<a class="pad" href="/static/about">About</a>
+					<a class="pad" href="/static/terms">Terms</a>
+					<a class="pad" href="/static/privacy">Privacy</a>
+				</p>
+			</footer>
 		</div>
 	</body>
+	<style>
+		#page-container {
+			min-height: 100vh;
+			display: flex;
+			flex-direction: column;
+		}
+		#footer-wrapper {
+			margin-top: auto;
+			padding: 1rem 1rem 0 1rem;
+		}
+		#footer-wrapper p {
+			margin-top: 0;
+			margin-bottom: 0.5rem;
+		}
+		#footer-wrapper .pad {
+			padding-left: 25px;
+		}
+	</style>
 </html>
