attempt to improve seo on the phrase i love conference

--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,9 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
 		<link rel="icon" type="image/png" sizes="48x48" href="%sveltekit.assets%/favicon-48x48.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Search general conference talks of the Church of Jesus Christ of Latter-day Saints"/>
 		<title>
-			Search general conference addresses of the Church of Jesus Christ of Latter-day Saints
+			I Love Conference
 		</title>
 		<script
 			async
