fork for scripturecentral

--- a/src/app.html
+++ b/src/app.html
@@ -7,15 +7,15 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
 		<link rel="icon" type="image/png" sizes="48x48" href="%sveltekit.assets%/favicon-48x48.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="description" content="Search general conference talks of the Church of Jesus Christ of Latter-day Saints"/>
+		<meta name="description" content="Demonstration question-answering engine for Scripture Central"/>
 		<title>
-			I Love Conference
+			ScriptureCentral Question Answering Demo
 		</title>
-		<script
-			async
-			src="https://analytics.umami.is/script.js"
-			data-website-id="d0c36680-7d94-45c0-8a18-d75cb5b71141"
-		></script>
+<!--		<script-->
+<!--			async-->
+<!--			src="https://analytics.umami.is/script.js"-->
+<!--			data-website-id="d0c36680-7d94-45c0-8a18-d75cb5b71141"-->
+<!--		></script>-->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -26,9 +26,9 @@
 			<footer id="footer-wrapper">
 				<p>
 					Not affiliated with the Church of Jesus Christ of Latter-day Saints
-					<a class="pad" href="/static/about">About</a>
-					<a class="pad" href="/static/terms">Terms</a>
-					<a class="pad" href="/static/privacy">Privacy</a>
+<!--					<a class="pad" href="/static/about">About</a>-->
+<!--					<a class="pad" href="/static/terms">Terms</a>-->
+<!--					<a class="pad" href="/static/privacy">Privacy</a>-->
 				</p>
 			</footer>
 		</div>
